# robust-steganography

./: .gitignore  Helpers.py  LICENSE.txt  Main.py  README.md  config_determinism.py  paraphrase_pairs.py  pyproject.toml  requirements.txt  steg.py  temp.txt  testing.py
checkpoints/: exp_checkpoint.pkl
embeddings/: embedding_utils.py  encoder.py  example.py  example_simulation.py  get_embedding.py  hash_functions.py  new_text.py  setup.py  simulation.py  steg.py  steg_system.py  system_prompts.py  test_error_correction.py  testing_pca_group.py  testing_pca_hash.py  todo.txt
embeddings/Measurement/: Helpers.py  compare_embeddings.py  length_effect.py  length_effect_openai.py  testing.py  text.json  text.py
embeddings/enron_emails/: create_paraphrases.py  parse_emails.py
embeddings/examples/: example.py  example_pca_corporate.py  example_simulation.py
embeddings/temp_pca/: README.md  pca_hash_model.py  testing_pca_group.py  testing_pca_hash.py
embeddings/tests/: test_error_correction.py
examples/embeddings/: example.py  example_pca_corporate.py  example_simulation.py  example_simulator_ciphertext_bytes.py  example_simulator_ciphertext_json.py
examples/watermarks/: gpt2_example.py  harsh_perturb_example.py  ngram_shuffle_example.py  print_counters.py  shakespeare_nanogpt_example.py  synonym_attack_example.py
measurements/: comparison.py  embedding_recovery_test.py  embeddings.py  embeddings_orginal.py  run_parallel_text_generation.sh  watermarked_text_generator.py  watermarks.py  watermarks_orginal.py
watermarks/: setup.py  testing.py  todo.txt
(+112 files in other folders)
